changing the backgrount images in main screen to icons

--- a/app/src/main/res/layout/activity_main_screen2.xml
+++ b/app/src/main/res/layout/activity_main_screen2.xml
@@ -33,8 +33,7 @@
             android:id="@+id/circleButton_event"
             android:layout_width="70dip"
             android:layout_height="70dip"
-            android:src="@drawable/eventt"
-            app:cb_color="#e53935"
+            app:cb_color="@color/appTheme"
             app:cb_pressedRingWidth="5dip"
             android:layout_alignTop="@+id/member"
             android:layout_centerHorizontal="true" />
@@ -59,8 +58,7 @@
             android:id="@+id/circleButton_member"
             android:layout_width="70dip"
             android:layout_height="70dip"
-            android:src="@drawable/prof"
-            app:cb_color="#e53935"
+            app:cb_color="@color/appTheme"
             app:cb_pressedRingWidth="5dip"
             android:layout_gravity="center"/>
 
@@ -86,9 +84,8 @@
             android:id="@+id/circleButton_about"
             android:layout_width="70dip"
             android:layout_height="70dip"
-            android:src="@drawable/aboutt"
 
-            app:cb_color="#e53935"
+            app:cb_color="@color/appTheme"
 
             app:cb_pressedRingWidth="5dip"/>
 
