--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -7,7 +7,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:progressDrawable="@color/lite_blue"
-        android:layout_height="2dp"
+        android:layout_height="5dp"
         android:id="@+id/progressBar" />
 
 
@@ -24,7 +24,8 @@
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/webView">
+        android:id="@+id/webView"
+        android:layout_below="@+id/progressBar">
 
     </WebView>
 
