--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_gravity="center"
-            android:text="ashishsurana@gmail.com"
+            android:text="km@gmail.com"
             android:inputType="textEmailAddress"
             android:id="@+id/editText_login_email"
             android:textColor="@android:color/white"
@@ -83,12 +83,13 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_gravity="center"
-            android:text="password"
+            android:text="ddddkm"
             android:inputType="textPassword"
             android:id="@+id/editText_login_password"
             android:textColor="@android:color/white"
             android:background="@android:color/transparent"
             android:layout_marginLeft="10dp" />
     </LinearLayout>
+
 
 </RelativeLayout>
