--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,11 +38,12 @@
             app:iiv_icon="faw-pencil-square-o"
             app:iiv_color="@color/black_de"
             android:id="@+id/imageView_edit"
+            android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
+            android:layout_marginTop="5dp"
             android:layout_below="@+id/textView_year"
-            android:layout_alignLeft="@+id/textView_year"
-            android:layout_alignStart="@+id/textView_year"
-            android:layout_marginTop="5dp" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -80,9 +81,8 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:id="@+id/textView_year"
             android:layout_marginTop="10dp"
-            android:paddingRight="10dp"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_marginRight="10dp" />
         <android.support.v7.widget.CardView
             android:id="@+id/card_view_description"
             android:layout_width="match_parent"
