--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -10,7 +10,7 @@
         android:id="@android:id/list"
 
         android:layout_alignParentRight="true"
-        android:padding="0dp"
+        android:scrollbars="none"
         android:divider="@drawable/divider"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
