--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -163,7 +163,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:layout_marginLeft="10dp"
                         android:maxLines="1"
                         android:id="@+id/editText_Designation"
                         android:hint="Designation"
