--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -10,13 +10,20 @@
         android:layout_height="wrap_content">
 
 
+        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:id="@+id/material_progressBar"
+            android:indeterminate="true"
+            app:mpb_progressStyle="horizontal"
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:id="@+id/imageView_companyLogo"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/image" />
+            android:src="@drawable/image"
+            android:layout_below="@+id/material_progressBar"
+            android:layout_centerHorizontal="true" />
 
         <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
@@ -58,8 +65,7 @@
                         android:layout_marginLeft="10dp"
                         android:maxLines="1"
                         android:id="@+id/editText_memberBio"
-                        android:hint="About Yourself"
-                        android:text="ABOUT MYself" />
+                        android:hint="About Yourself" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -158,7 +164,8 @@
                     android:id="@+id/textView_memberDesignation"
                     android:layout_below="@+id/textView_work"
                     android:layout_toRightOf="@+id/imageView_work"
-                    android:layout_toEndOf="@+id/imageView_work">
+                    android:layout_toEndOf="@+id/imageView_work"
+                    android:hint="Designation">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -166,18 +173,18 @@
                         android:layout_marginLeft="10dp"
                         android:maxLines="1"
                         android:id="@+id/editText_Designation"
-                        android:hint="Designation"
-                        android:text="CRO" />
+                         />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView_company"
+                    android:id="@+id/textInputLayout_company"
                     android:layout_below="@+id/textView_memberDesignation"
                     android:layout_toRightOf="@+id/imageView_work"
-                    android:layout_toEndOf="@+id/imageView_work">
+                    android:layout_toEndOf="@+id/imageView_work"
+                    android:hint="Company">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -185,8 +192,7 @@
                         android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:maxLines="1"
                         android:id="@+id/editText_company"
-                        android:hint="Company"
-                        android:text="mycom" />
+                         />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -198,7 +204,7 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/location"
                     android:layout_marginTop="5dp"
-                    android:layout_below="@id/textView_company" />
+                    android:layout_below="@id/textInputLayout_company" />
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -213,8 +219,7 @@
                         android:layout_marginLeft="10dp"
                         android:maxLines="1"
                         android:id="@+id/editText_locationHome"
-                        android:hint="Home Town"
-                        android:text="gbp" />
+                        android:hint="Home Town" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -233,8 +238,7 @@
                         android:maxLines="1"
 
                         android:id="@+id/editText_locationWork"
-                        android:hint="Current Place"
-                        android:text="bhl" />
+                        android:hint="Current Place" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -330,8 +334,7 @@
                         android:inputType="phone"
                         android:maxLines="1"
                         android:id="@+id/editText_memberPhone"
-                        android:hint="Phone Number"
-                        android:text="584" />
+                        android:hint="Phone Number" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -349,8 +352,7 @@
                         android:maxLines="1"
                         android:inputType="textWebEditText"
                         android:id="@+id/editText_memberWebLink"
-                        android:hint="Web Links"
-                        android:text="khghv" />
+                        android:hint="Web Links" />
 
                 </android.support.design.widget.TextInputLayout>
 
