--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -4,19 +4,19 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:scrollbars="none"
-    android:padding="5dp">
+    >
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
-
-        <!--<me.zhanghai.android.materialprogressbar.MaterialProgressBar-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="5dp"-->
-            <!--android:id="@+id/material_progressBar"-->
-            <!--android:indeterminate="true"-->
-            <!--app:mpb_progressStyle="horizontal"-->
-            <!--style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />-->
+         <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:indeterminate="true"
+            android:id="@+id/material_progressBar"
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
