adding bus to the progress bar

--- a/app/src/main/res/layout/activity_activity_member.xml
+++ b/app/src/main/res/layout/activity_activity_member.xml
@@ -4,12 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.PostLogin.PostLoginActivity">
+    <ProgressBar
+    android:layout_width="match_parent"
+    android:layout_height="10dp"
+    android:indeterminate="true"
+    android:id="@+id/material_progressBar"
+    style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/fragmentMenuContainer"
         android:id="@+id/fragment_container"
-        android:layout_alignParentTop="true" />
+        android:layout_below="@+id/material_progressBar" />
 
 
     <fragment
