--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,6 +10,12 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp" >
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:indeterminate="true"
+            android:id="@+id/material_progressBar"
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -52,7 +58,7 @@
             android:id="@+id/imageView_profilepic"
             android:layout_centerHorizontal="true"
             android:src="@drawable/image"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
