--- a/app/src/main/res/layout/activity_post_login.xml
+++ b/app/src/main/res/layout/activity_post_login.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/fragmentMenuContainer"
         android:id="@+id/fragment_container"
-        android:layout_below="@+id/material_progressBar" />
+        android:layout_alignParentTop="true"
+        android:layout_below="@+id/material_progressBar"/>
 
 
     <fragment
@@ -26,5 +27,6 @@
         android:id="@+id/fragmentMenuContainer"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+
         tools:layout="@layout/fragment_menu_bottom" />
 </RelativeLayout>
