--- a/app/src/main/res/layout/fragment_viewpager.xml
+++ b/app/src/main/res/layout/fragment_viewpager.xml
@@ -3,8 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="8dp"
     tools:context=".activities.PostLogin.PostLoginActivity">
+   <ProgressBar
+       android:layout_width="match_parent"
+       android:layout_height="10dp"
+       android:indeterminate="true"
+       android:id="@+id/material_progressBar_viewpager"
+       android:layout_alignParentTop="true"
+       style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
 
 
    <android.support.v7.widget.RecyclerView
@@ -12,6 +18,7 @@
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
+       android:layout_marginLeft="8dp"
        android:layout_marginBottom="-6dp"/>
 
 </RelativeLayout>
