--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -124,7 +124,7 @@
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="true"
+                    android:checked="false"
                     android:layout_margin="10dp"
                     android:id="@+id/checkBox_isNerd"
                     android:text="@string/isNerdCheckBox_text"/>
