refractoring + deleting useless files

--- a/app/src/main/res/layout/activity_post_login.xml
+++ b/app/src/main/res/layout/activity_post_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.PostLogin.PostLoginActivity">
+    tools:context=".activities.post_login.PostLoginActivity">
     <ProgressBar
     android:layout_width="match_parent"
     android:layout_height="10dp"
