--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".activities.PostLogin.MainScreenActivity">
+    tools:context=".activities.post_login.MainScreenActivity">
 
     <!--<com.mikepenz.iconics.view.IconicsTextView-->
         <!--android:layout_width="wrap_content"-->
