--- a/app/src/main/res/layout/fragment_viewpager.xml
+++ b/app/src/main/res/layout/fragment_viewpager.xml
@@ -18,7 +18,8 @@
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
-       android:layout_marginLeft="8dp"
-       android:layout_marginBottom="-6dp"/>
+       android:layout_below="@+id/material_progressBar_viewpager"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentStart="true" />
 
 </RelativeLayout>
