--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:id="@+id/material_progressBar_activity_main"
+            android:indeterminate="true"
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"/>
+
         <TabWidget
             android:layout_width="250dp"
             android:layout_height="80dp"
