progress bar attached to both login + signup

--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -29,7 +29,7 @@
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:inputType="text"
-                android:text="hbkhb"
+                android:text="hbkhb name"
                 android:id="@+id/editText_signup_name"
                 android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:text="hbkhb"
+                android:text="password"
                 android:inputType="textPassword"
                 android:id="@+id/editText_signup_password"
                 android:textColor="@android:color/white"
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:text="hbkhb"
+                android:text="password"
                 android:inputType="textPassword"
                 android:id="@+id/editText_signup_passwordConfirm"
                 android:textColor="@android:color/white"
