--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout -->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="fill_parent"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto">-->
+
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin"
+        android:padding="10dp"
         android:id="@+id/linearLayout_signup"
         xmlns:app="http://schemas.android.com/apk/res-auto">
         <LinearLayout
@@ -119,121 +116,5 @@
         android:textSize="18sp"
         android:textColor="#fff"
         android:background="@drawable/solid_red_background"
-
         android:layout_marginTop="65dp" />
     </LinearLayout>
-
-
-    <!--<EditText-->
-        <!--android:id="@+id/name"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:hint="Name"-->
-        <!--android:paddingStart="12dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:drawableLeft="@drawable/profileee"-->
-        <!--android:drawablePadding="10dp"-->
-        <!--android:background="@drawable/tab_bg"-->
-        <!--android:paddingTop="7dp"-->
-        <!--android:paddingBottom="7dp"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--android:textSize="20dp"-->
-        <!--android:textColorHint="#ccc"-->
-        <!--android:textColor="#fff"-->
-        <!--android:inputType="text"-->
-        <!--android:layout_marginTop="20dp"-->
-
-        <!--android:text="AShish" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/password"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:hint="Password"-->
-        <!--android:layout_marginBottom="10dp"-->
-        <!--android:paddingStart="12dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:drawableLeft="@drawable/password"-->
-        <!--android:drawablePadding="8dp"-->
-        <!--android:textSize="20dp"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:background="@drawable/tab_bg"-->
-        <!--android:paddingTop="7dp"-->
-        <!--android:paddingBottom="7dp"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--android:textColorHint="#ccc"-->
-        <!--android:textColor="#fff"-->
-        <!--android:inputType="textPassword"-->
-        <!--android:layout_below="@+id/email"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:text="ashish" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/email"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:hint="Email-Id"-->
-        <!--android:drawableLeft="@drawable/emaillll"-->
-        <!--android:drawablePadding="8dp"-->
-        <!--android:textSize="20dp"-->
-        <!--android:paddingStart="12dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:background="@drawable/tab_bg"-->
-        <!--android:paddingTop="7dp"-->
-        <!--android:paddingBottom="7dp"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--android:textColorHint="#ccc"-->
-        <!--android:textColor="#fff"-->
-        <!--android:inputType="textEmailAddress"-->
-        <!--android:layout_below="@+id/name"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:text="s@g.vom" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/confirm_password"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:hint="Confirm Password"-->
-        <!--android:textSize="20dp"-->
-        <!--android:background="@drawable/tab_bg"-->
-        <!--android:drawableLeft="@drawable/password"-->
-        <!--android:drawablePadding="8dp"-->
-        <!--android:paddingTop="8dp"-->
-        <!--android:paddingBottom="7dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingStart="12dp"-->
-        <!--android:layout_marginTop="129dp"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--android:textColorHint="#ccc"-->
-        <!--android:textColor="#fff"-->
-
-        <!--android:inputType="textPassword"-->
-
-        <!--android:layout_below="@+id/name"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:text="ashish" />-->
-
-    <!--<Button-->
-        <!--android:id="@+id/signup"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="48dp"-->
-        <!--android:text="Continue"-->
-        <!--android:textSize="18dp"-->
-        <!--android:textColor="#fff"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--android:background="@drawable/solid_red_background"-->
-
-        <!--android:layout_below="@+id/password"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="65dp" />-->
-
-<!--</RelativeLayout>-->
