--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -3,13 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<ProgressBar-->
-        <!--style="?android:attr/progressBarStyleHorizontal"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:progressDrawable="@color/lite_blue"-->
-        <!--android:layout_height="2dp"-->
-        <!--android:id="@+id/progressBar" />-->
-
 
     <com.mikepenz.iconics.view.IconicsImageView
         android:layout_width="200dp"
@@ -23,8 +16,7 @@
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/webView"
-        android:layout_marginTop="8dp">
+        android:id="@+id/webView">
 
     </WebView>
 
