--- a/app/src/main/res/layout/fragment_expandable_list.xml
+++ b/app/src/main/res/layout/fragment_expandable_list.xml
@@ -5,14 +5,22 @@
 
             <ExpandableListView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/expandableListView"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_above="@+id/button_filter" />
+                 />
 
 
+    <ExpandableListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/expandableListView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/expandableListView"
+        android:layout_above="@+id/button_filter" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
