--- a/app/src/main/res/layout/listrow_child.xml
+++ b/app/src/main/res/layout/listrow_child.xml
@@ -15,4 +15,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:checked="false" />
+
 </RelativeLayout>
