--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -7,10 +7,10 @@
     android:weightSum="1">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:id="@+id/profileimage"
-        android:layout_margin="7dp"
+        android:layout_margin="10dp"
         android:src="@drawable/image"
         />
 
@@ -93,5 +93,5 @@
         android:background="@color/grey"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        />
+        android:layout_marginTop="-2dp" />
 </RelativeLayout>
