--- a/app/src/main/res/layout/activity_post_login.xml
+++ b/app/src/main/res/layout/activity_post_login.xml
@@ -5,15 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".activities.post_login.PostLoginActivity">
     <ProgressBar
-    android:layout_width="match_parent"
-    android:layout_height="10dp"
-    android:id="@+id/material_progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:id="@+id/material_progressBar"
         android:indeterminate="true"
         style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@+id/fragmentMenuContainer"
         android:id="@+id/fragment_container"
         android:layout_alignParentTop="true"
@@ -26,6 +26,5 @@
         android:name="com.example.ashish.alumini.fragments.FragmentMenu"
         android:id="@+id/fragmentMenuContainer"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         tools:layout="@layout/fragment_menu_bottom" />
 </RelativeLayout>
