--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -83,30 +83,30 @@
                 android:layout_marginLeft="10dp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/tab_bg"
-            android:layout_marginTop="15dp"
-            android:padding="10dp">
-            <com.mikepenz.iconics.view.IconicsImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:iiv_icon="faw-lock"
-                android:layout_marginLeft="3dp"
-                app:iiv_color="@color/card_background"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:layout_gravity="center"
-                android:text="password"
-                android:inputType="textPassword"
-                android:id="@+id/editText_signup_passwordConfirm"
-                android:textColor="@android:color/white"
-                android:background="@android:color/transparent"
-                android:layout_marginLeft="10dp" />
-        </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/tab_bg"-->
+            <!--android:layout_marginTop="15dp"-->
+            <!--android:padding="10dp">-->
+            <!--<com.mikepenz.iconics.view.IconicsImageView-->
+                <!--android:layout_width="30dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--app:iiv_icon="faw-lock"-->
+                <!--android:layout_marginLeft="3dp"-->
+                <!--app:iiv_color="@color/card_background"/>-->
+            <!--<EditText-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:text="password"-->
+                <!--android:inputType="textPassword"-->
+                <!--android:id="@+id/editText_signup_passwordConfirm"-->
+                <!--android:textColor="@android:color/white"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--android:layout_marginLeft="10dp" />-->
+        <!--</LinearLayout>-->
 
         <Button
         android:id="@+id/button_signup"
